--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="flap">💌 Open This Letter💌</div>
     <div class="content">
       <h1>💖 Special Message for You 💖</h1>
-      <p>'Il be a great support to your career, and I won't interfere, but I will always love you."</p>
+      <p><span style="color: red;">"ABI"</span>Il be a great support to your career, and I won't interfere, but I will always love you ."</p>
       <button class="btn" onclick="window.location.href='memories.html'">
         Click this💍
       </button>
