--- a/third.html
+++ b/third.html
@@ -62,7 +62,7 @@
     <img src="2.1.jpeg" alt="Memory 2">
     <img src="2.2.jpeg" alt="Memory 3">
   </div>
-  <!-- Back button now goes to FIRST page -->
-  <button class="btn" onclick="window.location.href='love.html'">Back to Invitation</button>
+  <!-- Back button now goes to home page -->
+  <button class="btn" onclick="window.location.href='index.html'">Back to Invitation</button>
 </body>
 </html>
